# gordo-core

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  pypi.yaml  snyk.yaml
docs/: Makefile  conf.py  index.rst
docs/api/: base_dataset.rst  data_providers.rst  exceptions.rst  file_systems.rst  filters.rst  index.rst  sensor_tag.rst  time_series.rst  utils.rst
docs/overview/: customization.rst  data_preprocessing.rst  dataset_preprocessing.rst  index.rst  metadata.rst
examples/: turbine_sensors.csv
examples/data_providers/: csv_provider.py
gordo_core/: __init__.py  back_compatibles.py  base.py  dist.py  exceptions.py  import_utils.py  metadata.py  sensor_tag.py  time_series.py  utils.py  validators.py
gordo_core/data_providers/: __init__.py  base.py  partition.py  providers.py  utils.py
gordo_core/data_providers/contrib/: __init__.py  csv_provider.py
gordo_core/data_providers/examples/: csv_provider.py
gordo_core/file_systems/: __init__.py  base.py
gordo_core/filters/: __init__.py  periods.py  rows.py
scripts/: check_code.sh  check_version.sh  prepare_version.sh  tests.sh
tests/: conftest.py  test_base.py  test_dataset.py  test_fill_nans_on_series_join.py  test_import_utils.py  test_metadata.py  test_sensor_tag.py  test_utils.py  utils.py
tests/data/fill_nans_data/: expected_metadata.py  tc1_26DE603A.csv  tc1_26PST6021.csv  tc1_expected_df.csv  tc2_21FIT1029.csv  tc2_21PIT1001.csv  tc2_expected_df.csv  tc3_expected_df.csv  tc4_expected_df.csv  tc5_26XT8019.csv  tc5_expected_df.csv  tc6_expected_df.csv  tc7_26PDT8005.csv  tc7_26XT8019.csv  tc7_expected_df.csv
tests/data_providers/: conftest.py  test_base.py  test_partition.py  test_provider_influx.py  test_providers.py
tests/file_systems/: test_base.py
tests/filters/: test_periods.py  test_rows.py
tests/filters/data/periods/: data.parquet
