[tool.poetry]
authors = ["Equinor ASA <fg_gpl@equinor.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
description = "Gordo core library"
homepage = "https://github.com/equinor/gordo-core"
include = [
  "LICENSE",
  "gordo_core/_version.py",
]
keywords = ["gordo-core"]
license = "AGPLv3"
name = "gordo-core"
packages = [
  {include = "gordo_core"},
]
readme = "README.md"
repository = "https://github.com/equinor/gordo-core"
version = "0.3.0rc0"

[tool.poetry.dependencies]
cachetools = "^5.3.0"
influxdb = "^5.3.0"
numexpr = "^2.7.1"
numpy = ">=1.18.0,<2.0.0,!=1.20"
pandas = "^1.1.0"
pyarrow = ">=3.0.0,<11.0.0"
python = "^3.9"
scikit-learn = "^1.2.2"
xarray = ">=0.16.2,<2024.0.0"

[tool.poetry.dev-dependencies]
black = ">=22.1.0,<23.0.0"
docker = "^4.2.0"
ipython = "^7.32.0"
mock = "^4.0.2"
pytest = "^6.0"
pytest-cov = "^2.8.1"
pytest-flakes = "4.0.5"
pytest-mock = "^3.1.0"
pytest-mypy = "0.9.1"
pytest-xdist = "^2.1.0"
types-cachetools = "*"
types-mock = "*"
types-python-dateutil = "*"
types-pytz = "*"
types-requests = "*"
types-setuptools = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
